--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-ticker": "^1.3.2",
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0"
   },
